# azdotui

./: .gitignore  README.md  pyproject.toml
src/azdotui/: main.py
src/azdotui/api/: azdo.py
src/azdotui/config/: logger.py  settings.py
src/azdotui/events/: commands.py  keybindings.py
src/azdotui/ui/: layout.py  status_bar.py
src/azdotui/ui/panes/: __init__.py  base_pane.py  builds_pane.py  pipelines_pane.py  projects_pane.py
src/azdotui/utils/: cursed.py  debounce.py  enums.py  helpers.py  tree.py
